Отправка сообщения с конфирмацией на email

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -25,7 +25,7 @@
     <!-- Email input -->
     <div class="form-outline mb-4">
         <label class="form-label" for="form2Example1">Username</label>
-        <input type="email" name="username" id="form2Example1" class="form-control"/>
+        <input type="text" name="username" id="form2Example1" class="form-control"/>
     </div>
 
     <!-- Password input -->
