--- a/src/main/resources/templates/reg.html
+++ b/src/main/resources/templates/reg.html
@@ -67,6 +67,11 @@
 
                                 <!-- Email input -->
                                 <div class="form-outline mb-4">
+                                    <label class="form-label" for="email">Email</label>
+                                    <input type="text" id="email" class="form-control"  th:field="*{email}"/>
+                                </div>
+                                <!-- Username input -->
+                                <div class="form-outline mb-4">
                                     <label class="form-label" for="username">Username</label>
                                     <input type="text" id="username" class="form-control"  th:field="*{username}"/>
                                 </div>
