--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -22,6 +22,9 @@
 <form th:action="@{/login}" method="post" style="width: 500px; margin: 150px auto; ">
     <h3 class="text-center">Login</h3>
     <div th:if="${param.error}" class="alert alert-danger text-center" role="alert">Wrong email or password</div>
+    <div th:if="${param.pass}" class="alert alert-success text-center" role="alert">Пароль успешно изменен</div>
+    <div th:if="${param.email}" class="alert alert-success text-center" role="alert">Сообщение успешно отправлено на указанный email</div>
+
     <!-- Email input -->
     <div class="form-outline mb-4">
         <label class="form-label" for="form2Example1">Username</label>
@@ -41,7 +44,7 @@
     <!-- Register buttons -->
     <div class="text-center">
         <p>Don't have an account? <a href="/reg">Register</a></p>
-
+        <a th:href="@{/forgotPassword}">Forgot your password?</a>
     </div>
 </form>
 
